# advent_of_code_2019

./: .gitignore  1_The_Tyranny_of_the_Rocket_Equation.hs  AdventOfCode.cabal  logs.txt
.stack-work/: stack.sqlite3
.stack-work/ghci/ece928c4/: cabal_macros.h
.stack-work/install/x86_64-linux/6c3a6373a5badc2a61f315873b21ef573a9d3715ff6630cba129ad82f58ed9b7/8.6.5/lib/x86_64-linux-ghc-8.6.5/AdventOfCode-0.1.0.0-6mLx1p012Y08l6RpOSPn1w/: RocketEquation.hi
.stack-work/install/x86_64-linux/6c3a6373a5badc2a61f315873b21ef573a9d3715ff6630cba129ad82f58ed9b7/8.6.5/pkgdb/: AdventOfCode-0.1.0.0-6mLx1p012Y08l6RpOSPn1w.conf  package.cache
src/: RocketEquation.hs  RocketEquationTest.hs
src/AoC1/: RocketEquation.hs
src/AoC10/: MonitoringStations.hs
src/AoC11/: SpacePolice.hs
src/AoC12/: NBody.hs
src/AoC13/: CarePackage.hs
src/AoC14/: SpaceFuel.hs
src/AoC15/: Oxygen.hs  map.txt
src/AoC2/: ProgramAlarm.hs
src/AoC3/: CrossedWires.hs
src/AoC4/: SecureContainer.hs
src/AoC5/: Asteroids.hs
src/AoC6/: OrbitMap.hs
src/AoC7/: Amplification.hs
src/AoC8/: SpaceImageFormat.hs
src/AoC9/: SensorBoost.hs
src/Common/: Geometry.hs  Intcode.hs  Utils.hs
test/: RocketEquationSpec.hs  Spec.hs
test/AoC1/: RocketEquationSpec.hs
test/AoC10/: MonitoringStationsSpec.hs
test/AoC11/: SpacePoliceSpec.hs
test/AoC12/: NBodySpec.hs
test/AoC13/: CarePackageSpec.hs
test/AoC14/: SpaceFuelSpec.hs
test/AoC15/: OxygenSpec.hs
test/AoC2/: ProgramAlarmSpec.hs
test/AoC3/: CrossedWiresSpec.hs
test/AoC4/: SecureContainerSpec.hs
test/AoC5/: AsteroidsSpec.hs
test/AoC6/: OrbitMapSpec.hs
test/AoC7/: AmplificationSpec.hs
test/AoC8/: SpaceImageFormatSpec.hs
test/AoC9/: SensorBoostSpec.hs
test/Common/: IntcodeSpec.hs  IntcodeUtils.hs  UtilsSpec.hs
