-- AdventOfCode.cabal
name: AdventOfCode 
version: 0.1.0.0
license-file: LICENSE
author: Raffles
maintainer: 
category: Text
build-type: Simple
cabal-version: >=1.10

library
  exposed-modules:
    AoC1.RocketEquation
    AoC2.ProgramAlarm
    AoC3.CrossedWires
    AoC4.SecureContainer
  ghc-options: -Wall -fwarn-tabs
  build-depends: base >=4.7 && <5, hspec, split, containers, regex-tdfa, regex-tdfa-text, regex 
  hs-source-dirs: src
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
    test
  ghc-options: -Wall
  build-depends:
      base ==4.*
    , hspec ==2.*
    , AdventOfCode
    , containers
  other-modules:
    AoC1.RocketEquationSpec
    AoC2.ProgramAlarmSpec
    AoC3.CrossedWiresSpec
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
