cabal-version: >=1.10
name: AdventOfCode
version: 0.1.0.0
license-file: LICENSE
author: Raffles
maintainer: 
category: Text
build-type: Simple
cabal-version: >=1.10

library
    exposed-modules:
        Common.Intcode
        Common.Utils
        Common.Geometry
        AoC1.RocketEquation
        AoC2.ProgramAlarm
        AoC3.CrossedWires
        AoC4.SecureContainer
        AoC5.Asteroids
        AoC6.OrbitMap
        AoC7.Amplification
        AoC8.SpaceImageFormat
        AoC9.SensorBoost
        AoC10.MonitoringStations
        AoC11.SpacePolice
        AoC12.NBody
    hs-source-dirs: src
    default-language: Haskell2010
    ghc-options: -Wall -fwarn-tabs
    build-depends:
        base >=4.7 && <5,
        hspec -any,
        split -any,
        containers -any,
        array -any,
        linear -any,
        lens -any

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-tool-depends: hspec-discover:hspec-discover ==2.*
    hs-source-dirs: test
    other-modules:
        AoC1.RocketEquationSpec
        AoC2.ProgramAlarmSpec
        AoC3.CrossedWiresSpec
        AoC4.SecureContainerSpec
        Common.IntcodeSpec
        Common.IntcodeUtils
        AoC5.AsteroidsSpec
        AoC6.OrbitMapSpec
        AoC7.AmplificationSpec
        AoC9.SensorBoostSpec
        AoC10.MonitoringStationsSpec
        AoC11.SpacePoliceSpec
        AoC12.NBodySpec
    default-language: Haskell2010
    ghc-options: -Wall
    build-depends:
        base ==4.*,
        hspec ==2.*,
        AdventOfCode -any,
        containers -any,
        linear -any
